# kmp-lsp

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  TASK_PLAN.md  copilot-memories.md  debug_tree.rs  install.ps1  install.sh  perf-regression-analysis.md  sidecar-perf-audit.md
.githooks/: pre-commit
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
contrib/: extract-sources.py  kotlin-cli.py  pr-review.sh  pr.sh  release.sh  sync-skill.sh
contrib/aqua-registry/: registry.yaml
contrib/copilot-extension/: README.md  extension.mjs
contrib/copilot-skill/: SKILL.md
contrib/mason-registry/: package.yaml
contrib/vscode/: extension.js  package.json
contrib/zed-extension/: Cargo.toml  README.md  extension.toml  extension.wasm
demo/: cli.cast  demo.tape
docs/: agent-reference.md  architecture.md  copilot.md  editors.md  features.md  incremental-parsing.md  performance.md
docs/architecture/: parse-to-lsp-paths.md  unified-resolution-handler.md
docs/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md
java-sidecar/: build.gradle.kts  settings.gradle.kts
scripts/: install.ps1  install.sh
skills/: README.md
skills/kotlin-lsp/: SKILL.md
src/: indexer.rs  indexer_tests.rs  inlay_hints.rs  inlay_hints_tests.rs  jar_extract.rs  jar_extract_tests.rs  main.rs  parser.rs  parser_tests.rs  path_util.rs  path_util_tests.rs  queries.rs  rg.rs  rg_tests.rs  semantic_tokens.rs  semantic_tokens_tests.rs  sidecar.rs  sidecar_ipc_tests.rs  stdlib.rs  str_ext.rs  str_ext_tests.rs  swift_stdlib.rs  task_runner.rs  types.rs  workspace_json.rs  workspace_json_tests.rs
src/backend/: actions.rs  capabilities.rs  commands.rs  completion_context.rs  cursor.rs  format.rs  git_watcher.rs  handlers.rs  handlers_tests.rs  helpers.rs  helpers_tests.rs  init.rs  mod.rs  nav.rs  panic_guard.rs  progress.rs  rename.rs  rename_tests.rs
src/cli/: args.rs  args_tests.rs  batch.rs  check.rs  doctor.rs  extract_sources.rs  hover.rs  inject.rs  insert.rs  integration_tests.rs  mod.rs  organize_imports.rs  output.rs  output_tests.rs  path_meta.rs  path_meta_tests.rs  run.rs  run_tests.rs  sources.rs  templates.rs  tokens.rs
src/features/: hover.rs  (+38 more)
tests/: benches.rs  cli_check.rs  cli_commands.rs  cli_complete.rs  cli_diagnose.rs  cli_refs.rs  lsp_smoke.rs  swift_grammar.rs
(+92 files in other folders)
