[workspace]
members = ["."]

[package]
name        = "kotlin-lsp"
version = "0.20.0"
edition     = "2021"
description = "Fast, low-memory LSP server for Kotlin, Java, and Swift. Instant startup, dot-completion, go-to-definition, hover — no JVM required."
license     = "MIT"
repository  = "https://github.com/Hessesian/kotlin-lsp"
homepage    = "https://github.com/Hessesian/kotlin-lsp"
readme      = "README.md"
keywords    = ["lsp", "kotlin", "java", "swift", "language-server"]
categories  = ["development-tools", "command-line-utilities"]
exclude      = ["demo/*", "contrib/*", ".tours/*", "docs/*", ".github/*"]

[[bin]]
name = "kotlin-lsp"
path = "src/main.rs"

[dependencies]
# LSP protocol
# LSP proposed features for type hierarchy, inlay hints, etc.
# Enable lsp-types/proposed via tower-lsp/proposed
tower-lsp  = "0.20"
tokio      = { version = "1", features = ["full"] }

# Parsing
tree-sitter      = { git = "https://github.com/tree-sitter/tree-sitter", tag = "v0.26.9" }
tree-sitter-java = { git = "https://github.com/tree-sitter/tree-sitter-java" }
tree-sitter-swift = { git = "https://github.com/alex-pinkus/tree-sitter-swift", tag = "0.7.3-with-generated-files" }
tree-sitter-kotlin = { git = "https://github.com/fwcd/tree-sitter-kotlin" }

# Concurrent index storage (no Mutex needed)
dashmap = "5"

# Logging
log        = "0.4"
env_logger = "0.11"

# File discovery fallback
walkdir = "2"
ignore = "0.4"
globset = "0.4"

# Index cache serialization
serde      = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
bincode  = "1"
sha2 = "0.10"
zip = "2"
futures = "0.3.32"
lexopt = "0.3"

[profile.release]
opt-level = 3
lto       = "thin"
codegen-units = 1
strip     = true

# Profiling: release speed + debug symbols for flamegraphs
# Usage: cargo build --profile profiling && samply record ./target/profiling/kotlin-lsp index .
[profile.profiling]
inherits  = "release"
debug     = 2
strip     = false
lto       = false

[dev-dependencies]

tempfile = "3"


# Override tree-sitter-language to match tree-sitter 0.26.9.
# Grammar crates depend on `tree-sitter-language = "0.1"` from crates.io,
# but the `LanguageFn` type must be the same version across all crates.
[patch.crates-io]
tree-sitter-language = { git = "https://github.com/tree-sitter/tree-sitter", tag = "v0.26.9" }
